sort date fix for visitor, contractor and move. renovation hitsory api change to move in history api, SDK 35 navigation bar overlaps with page (fix) src/

--- a/src/global.scss
+++ b/src/global.scss
@@ -529,7 +529,7 @@ ion-header {
 }
 
 ion-content#resident-content {
-  --offset-bottom: -75px !important;
+  --offset-bottom: -80px !important;
 }
 
 /* Rounded sliders */
